# obfuscator

./: .python-version  CLI_DOCS.md  Makefile  README.md  REPORT.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
obfuscator/: __init__.py  __main__.py  cli.py  cparser.py  ctools.py  examples.py  techniques.py
obfuscator/data/c_function_examples/: pi.c  sum42.c
tests/: test_cli.py  test_ctools.py  test_examples.py  test_obfuscator.py  test_techniques.py
