[tool.poetry]
name = "bmaingret-obfuscator"
version = "0.1.0"
description = "Basic C Obfuscator"
authors = ["Baptiste Maingret <baptiste.maingret@gmail.com>"]
readme = "README.md"
packages = [
    { include = "obfuscator" }
    ]

[tool.poetry.dependencies]
python = "^3.8"
cffi = "^1.15.0"
pycparserext = "^2021.1"
typer = {version = "^0.3.2", extras = ["all"]}

[tool.poetry.dev-dependencies]
typer-cli = "^0.0.12"
black = {version = "^21", allow-prereleases = true}
isort = "^5.10.1"
pylint = "^2.12.2"
pytest = "^7.0.1"
coverage = "^6.3.2"
autoflake = "^1.4"

[tool.poetry.scripts]
bmaingret-obfuscator = "obfuscator.cli:app"

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.coverage.run]
source = ["obfuscator"]
command_line = "-m pytest"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "pass"]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
